hockey/ui: expose goal events for UI verification